Finished first version of properties manager. Already filling simple private, protected and public fields from a configuration file.

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,19 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- LOGGING -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.12</version>
+            </dependency>
 
+            <!-- TESTING -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.11</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
